--- a/compose.yaml
+++ b/compose.yaml
@@ -7,10 +7,10 @@ services:
       POSTGRES_DB: shop
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U admin -d shop"]
-      interval: 10s
+      interval: 4s
       # timeout: 5s
       retries: 5
-      start_period: 10s
+      start_period: 4s
   web:
     build: ./
     restart: on-failure
@@ -20,4 +20,4 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "gunicorn shopApp.wsgi:application --bind 0.0.0.0:8000 --workers 3"
